gcc/testsuite/rust/rustc/ui/type/type-check/cannot_infer_local_or_array.rs
fn main() {
    let x = []; // { dg-error ".E0282." "" { target *-*-* } }
}

